--- a/notebooks/blotches.ipynb
+++ b/notebooks/blotches.ipynb
@@ -11,45 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url_db = Path(\"/Users/klay6683/Dropbox/data/planet4/image_urls.csv.gz\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "urls = pd.read_csv(url_db).set_index('tile_id').squeeze()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'http://www.planetfour.org/subjects/standard/50e7429f5e2ed21240003f52.jpg'"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "urls.at[blotch.tile_id]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +20,7 @@
        "['planet4']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,16 +31,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['fans', 'blotches', 'tile_coordinates', 'metadata', 'region_names']"
+       "['fans',\n",
+       " 'blotches',\n",
+       " 'tile_coordinates',\n",
+       " 'metadata',\n",
+       " 'region_names',\n",
+       " 'tile_urls']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,26 +56,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# blotches = intake.cat.planet4.blotches.read()\n",
-    "blotches = pd.read_csv(\"blotches.csv\")"
+    "blotches = intake.cat.planet4.blotches.read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# squeeze() forces the query to return a pd.Series (1D) vs a pd.DataFrame (2D)\n",
     "blotch = blotches.query('marking_id == \"B015676\"').squeeze()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +107,7 @@
        "Name: 71065, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,13 +146,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f5a6c561626451fa8b8858c2b6dcc1f",
+       "model_id": "1df5166c280245fb87b887abb04edc41",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,49 +166,6 @@
    ],
    "source": [
     "m.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "marking_id                        B015676\n",
-       "angle                               11.42\n",
-       "tile_id                        APF0000vj8\n",
-       "image_x                            243.17\n",
-       "image_y                           17651.3\n",
-       "n_votes                                 3\n",
-       "obsid                     ESP_021903_0930\n",
-       "radius_1                               10\n",
-       "radius_2                               10\n",
-       "vote_ratio                              1\n",
-       "x                                  243.17\n",
-       "y                                  115.33\n",
-       "x_angle                              0.93\n",
-       "y_angle                               0.2\n",
-       "l_s                               264.186\n",
-       "map_scale                            0.25\n",
-       "north_azimuth                     158.675\n",
-       "BodyFixedCoordinateX             -108.365\n",
-       "BodyFixedCoordinateY              139.581\n",
-       "BodyFixedCoordinateZ             -3377.61\n",
-       "PlanetocentricLatitude           -87.0052\n",
-       "PlanetographicLatitude           -87.0402\n",
-       "Longitude                         127.824\n",
-       "Name: 71065, dtype: object"
-      ]
-     },
-     "execution_count": 152,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "blotch"
    ]
   },
   {
