fix empty README
fixes #4

--- a/notebooks/00_io.ipynb
+++ b/notebooks/00_io.ipynb
@@ -147,6 +147,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████| 786k/786k [00:00<00:00, 489MB/s]\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -463,16 +470,9 @@
    "split_at_heading": true
   },
   "kernelspec": {
-   "display_name": "conda-env-py310-py",
+   "display_name": "Python (conda-py311)",
    "language": "python",
-   "name": "conda-env-py310-py"
-  },
-  "widgets": {
-   "application/vnd.jupyter.widget-state+json": {
-    "state": {},
-    "version_major": 2,
-    "version_minor": 0
-   }
+   "name": "py311"
   }
  },
  "nbformat": 4,
