--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -1781,16 +1781,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda-env-py311-py",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-py311-py"
-  },
-  "widgets": {
-   "application/vnd.jupyter.widget-state+json": {
-    "state": {},
-    "version_major": 2,
-    "version_minor": 0
-   }
+   "name": "python3"
   }
  },
  "nbformat": 4,
