--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -36,9 +36,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda-env-py310-py",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-py310-py"
+   "name": "python3"
   }
  },
  "nbformat": 4,
