adding missing X2LATLON and do_campt and import of io

--- a/notebooks/05d_production.projection.ipynb
+++ b/notebooks/05d_production.projection.ipynb
@@ -24,10 +24,6 @@
    "source": [
     "# | export\n",
     "\n",
-    "#internal imports\n",
-    "from p4tools.catalog import io\n",
-    "\n",
-    "\n",
     "###external imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -37,7 +33,13 @@
     "import logging\n",
     "import rasterio\n",
     "import rioxarray as rxr\n",
-    "from planetarypy.hirise import RED_PRODUCT, SOURCE_PRODUCT\n"
+    "from planetarypy.hirise import RED_PRODUCT, SOURCE_PRODUCT\n",
+    "\n",
+    "\n",
+    "#internal imports\n",
+    "import p4tools.production.io as io\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -46,6 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# | export\n",
+    "\n",
     "logger = logging.getLogger(__name__)"
    ]
   },
@@ -241,8 +245,98 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# | export \n",
+    "# | export\n",
     "\n",
+    "def do_campt(mosaicname, savepath, temppath):\n",
+    "    print(\"Calling do_campt\")\n",
+    "    try:\n",
+    "        campt(\n",
+    "            from_=mosaicname,\n",
+    "            to=savepath,\n",
+    "            format=\"flat\",\n",
+    "            append=\"no\",\n",
+    "            coordlist=temppath,\n",
+    "            coordtype=\"image\",\n",
+    "        )\n",
+    "    except ProcessError as e:\n",
+    "        print(e.stderr)\n",
+    "        return mosaicname, False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
+    "\n",
+    "class XY2LATLON:\n",
+    "    edrpath = io.get_ground_projection_root()\n",
+    "\n",
+    "    def __init__(self, df, inpath, overwrite=False, obsid=None):\n",
+    "        self.df = df\n",
+    "        self.obsid = obsid\n",
+    "        self.inpath = inpath\n",
+    "        self.overwrite = overwrite\n",
+    "        self.p4m = P4Mosaic(self.obsid)\n",
+    "\n",
+    "    @property\n",
+    "    def obsid(self):\n",
+    "        return self._obsid\n",
+    "\n",
+    "    @obsid.setter\n",
+    "    def obsid(self, value):\n",
+    "        if value is None:\n",
+    "            try:\n",
+    "                self._obsid = self.df.image_name.iloc[0]\n",
+    "            except IndexError:\n",
+    "                raise IndexError(\"self.df maybe empty?\")\n",
+    "        else:\n",
+    "            self._obsid = value\n",
+    "\n",
+    "    @property\n",
+    "    def mosaicpath(self):\n",
+    "        return self.p4m.mosaic_path\n",
+    "\n",
+    "    @property\n",
+    "    def savepath(self):\n",
+    "        return self.inpath / f\"{self.obsid}_campt_out.csv\"\n",
+    "\n",
+    "    @property\n",
+    "    def savepath_blotch(self):\n",
+    "        return self.inpath / f\"{self.obsid}_blotch_campt_out.csv\"\n",
+    "\n",
+    "    @property\n",
+    "    def savepath_fan(self):\n",
+    "        return self.inpath / f\"{self.obsid}_fan_campt_out.csv\"\n",
+    "\n",
+    "    @property\n",
+    "    def temppath(self):\n",
+    "        return self.inpath / f\"{self.obsid}.tocampt\"\n",
+    "\n",
+    "    def process_inpath(self):\n",
+    "        df = self.df\n",
+    "        if len(df) == 0:\n",
+    "            return\n",
+    "        tempcoords = [\"image_x\", \"image_y\"]\n",
+    "        df[tempcoords].to_csv(str(self.temppath), header=False, index=False)\n",
+    "        if self.savepath.exists() and self.overwrite is False:\n",
+    "            return\n",
+    "        try:\n",
+    "            do_campt(self.mosaicpath, self.savepath, self.temppath)\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            return False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export \n",
     "\n",
     "class TileCalculator:\n",
     "    def __init__(self, cubepath, read_data=True, dbname=None):\n",
@@ -355,30 +449,6 @@
     "def p4tile_center_to_hirise_pix(tile, x_or_y):\n",
     "    p4pix = dict(x=420, y=324)  # half image sizes\n",
     "    return p4pix_to_hirise_pix(p4pix[x_or_y], tile, x_or_y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# | export\n",
-    "\n",
-    "def do_campt(mosaicname, savepath, temppath):\n",
-    "    print(\"Calling do_campt\")\n",
-    "    try:\n",
-    "        campt(\n",
-    "            from_=mosaicname,\n",
-    "            to=savepath,\n",
-    "            format=\"flat\",\n",
-    "            append=\"no\",\n",
-    "            coordlist=temppath,\n",
-    "            coordtype=\"image\",\n",
-    "        )\n",
-    "    except ProcessError as e:\n",
-    "        print(e.stderr)\n",
-    "        return mosaicname, False"
    ]
   }
  ],
