--- a/notebooks/05a_production.io.ipynb
+++ b/notebooks/05a_production.io.ipynb
@@ -33,6 +33,8 @@
     "from pathlib import Path\n",
     "import pandas as pd\n",
     "import logging\n",
+    "import configparser\n",
+    "import dask.dataframe as dd\n",
     "\n",
     "###imports typing\n",
     "\n"
@@ -44,7 +46,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOGGER = logging.getLogger(__name__)"
+    "# | export\n",
+    "\n",
+    "LOGGER = logging.getLogger(__name__)\n",
+    "\n",
+    "\n",
+    "pkg_name = __name__.split(\".\")[0]\n",
+    "configpath = Path.home() / \".{}.ini\".format(pkg_name)"
    ]
   },
   {
@@ -53,7 +61,107 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_and_pad_id(imgid: None | str) -> None | str:\n",
+    "# | export\n",
+    "\n",
+    "def get_config():\n",
+    "    \"\"\"Read the configfile and return config dict.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    dict\n",
+    "        Dictionary with the content of the configpath file.\n",
+    "    \"\"\"\n",
+    "    if not configpath.exists():\n",
+    "        raise IOError(\"Config file {} not found.\".format(str(configpath)))\n",
+    "    else:\n",
+    "        config = configparser.ConfigParser()\n",
+    "        config.read(str(configpath))\n",
+    "        return config\n",
+    "\n",
+    "\n",
+    "def set_database_path(dbfolder):\n",
+    "    \"\"\"Use to write the database path into the config.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    dbfolder : str or pathlib.Path\n",
+    "        Path to where planet4 will store clustering results by default.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        d = get_config()\n",
+    "    except IOError:\n",
+    "        d = configparser.ConfigParser()\n",
+    "        d[\"planet4_db\"] = {}\n",
+    "    d[\"planet4_db\"][\"path\"] = dbfolder\n",
+    "    with configpath.open(\"w\") as f:\n",
+    "        d.write(f)\n",
+    "    print(\"Saved database path into {}.\".format(configpath))\n",
+    "\n",
+    "\n",
+    "def get_data_root():\n",
+    "    d = get_config()\n",
+    "    data_root = Path(d[\"planet4_db\"][\"path\"]).expanduser()\n",
+    "    data_root.mkdir(exist_ok=True, parents=True)\n",
+    "    return data_root\n",
+    "\n",
+    "\n",
+    "def get_ground_projection_root():\n",
+    "    d = get_config()\n",
+    "    try:\n",
+    "        gp_root = Path(d[\"ground_projection\"][\"path\"])\n",
+    "    except KeyError:\n",
+    "        # warnings.warn(\n",
+    "        #     \"ground_projection_root not set in config.\\n\"\n",
+    "        #     \"Read/Write of projected data is disabled.\"\n",
+    "        # )\n",
+    "        gp_root = None\n",
+    "    else:\n",
+    "        gp_root.mkdir(exist_ok=True)\n",
+    "    return gp_root\n",
+    "\n",
+    "\n",
+    "if not configpath.exists():\n",
+    "    print(\"No configuration file {} found.\\n\".format(configpath))\n",
+    "    savepath = input(\"Please provide the path where you want to store planet4 results:\")\n",
+    "    set_database_path(savepath)\n",
+    "else:\n",
+    "    data_root = get_data_root()\n",
+    "\n",
+    "\n",
+    "def analysis_folder():\n",
+    "    name = \"p4_analysis\"\n",
+    "    if p4data().exists():\n",
+    "        path = p4data() / name\n",
+    "    else:\n",
+    "        path = dropbox() / name\n",
+    "    return path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
+    "\n",
+    "def dropbox():\n",
+    "    return Path.home() / \"Dropbox\"\n",
+    "\n",
+    "\n",
+    "def p4data():\n",
+    "    return dropbox() / \"data\" / \"planet4\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export \n",
+    "\n",
+    "def check_and_pad_id(imgid):\n",
     "    \"\"\"Checks the Image ID\n",
     "\n",
     "    Parameters\n",
@@ -329,6 +437,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# | export \n",
+    "\n",
     "class DBManager:\n",
     "\n",
     "    \"\"\"Access class for database activities.\n",
