fixing some errors

--- a/notebooks/05c_production.metadata.ipynb
+++ b/notebooks/05c_production.metadata.ipynb
@@ -10,6 +10,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# production.metadata\n",
+    "\n",
+    "> This module includes the metadata calculations which are used to calculate the metadata of the "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -17,14 +26,12 @@
    "source": [
     "# | export\n",
     "\n",
-    "\n",
-    "from p4tools.production import projection\n",
-    "\n",
-    "\n",
     "import logging\n",
     "from planetarypy.pds.apps import get_index\n",
     "from planetarypy.hirise import ProductPathfinder\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "from p4tools.production.projection import P4Mosaic"
    ]
   },
   {
@@ -44,6 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# | export\n",
+    "\n",
     "class MetadataReader:\n",
     "\n",
     "    def __init__(self, obsid):\n",
@@ -68,7 +77,7 @@
     "\n",
     "    @property\n",
     "    def campt_out_path(self):\n",
-    "        p4m = projection.P4Mosaic(self.obsid)\n",
+    "        p4m = P4Mosaic(self.obsid)\n",
     "        return p4m.mosaic_path.parent / f\"{self.obsid}_campt_out.csv\"\n",
     "\n",
     "    @property\n",
