--- a/notebooks/05a_production.io.ipynb
+++ b/notebooks/05a_production.io.ipynb
@@ -20,11 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# | export \n",
+    "from __future__ import annotations\n",
     "\n",
     "###imports p4tools\n",
     "\n",
@@ -37,6 +38,7 @@
     "import dask.dataframe as dd\n",
     "\n",
     "###imports typing\n",
+    "from configparser import ConfigParser\n",
     "\n"
    ]
   },
@@ -57,18 +59,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No configuration file /home/tihro/.__main__.ini found.\n",
+      "\n",
+      "Saved database path into /home/tihro/.__main__.ini.\n"
+     ]
+    }
+   ],
    "source": [
     "# | export\n",
     "\n",
-    "def get_config():\n",
+    "from configparser import ConfigParser\n",
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "def get_config() -> ConfigParser:\n",
     "    \"\"\"Read the configfile and return config dict.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
-    "    dict\n",
+    "    ConfigParser\n",
     "        Dictionary with the content of the configpath file.\n",
     "    \"\"\"\n",
     "    if not configpath.exists():\n",
@@ -79,7 +95,7 @@
     "        return config\n",
     "\n",
     "\n",
-    "def set_database_path(dbfolder):\n",
+    "def set_database_path(dbfolder) -> None:\n",
     "    \"\"\"Use to write the database path into the config.\n",
     "\n",
     "    Parameters\n",
@@ -98,14 +114,14 @@
     "    print(\"Saved database path into {}.\".format(configpath))\n",
     "\n",
     "\n",
-    "def get_data_root():\n",
+    "def get_data_root() -> Path:\n",
     "    d = get_config()\n",
     "    data_root = Path(d[\"planet4_db\"][\"path\"]).expanduser()\n",
     "    data_root.mkdir(exist_ok=True, parents=True)\n",
     "    return data_root\n",
     "\n",
     "\n",
-    "def get_ground_projection_root():\n",
+    "def get_ground_projection_root() -> Path | None:\n",
     "    d = get_config()\n",
     "    try:\n",
     "        gp_root = Path(d[\"ground_projection\"][\"path\"])\n",
@@ -127,8 +143,16 @@
     "else:\n",
     "    data_root = get_data_root()\n",
     "\n",
+    "def dropbox() -> Path:\n",
+    "    return Path.home() / \"Dropbox\"\n",
     "\n",
-    "def analysis_folder():\n",
+    "\n",
+    "def p4data() -> Path:\n",
+    "    return dropbox() / \"data\" / \"planet4\"\n",
+    "\n",
+    "#TODO Check if the p4data and dropbox are even needed\n",
+    "\n",
+    "def analysis_folder() -> Path:\n",
     "    name = \"p4_analysis\"\n",
     "    if p4data().exists():\n",
     "        path = p4data() / name\n",
@@ -142,37 +166,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# | export\n",
-    "\n",
-    "def dropbox():\n",
-    "    return Path.home() / \"Dropbox\"\n",
-    "\n",
-    "\n",
-    "def p4data():\n",
-    "    return dropbox() / \"data\" / \"planet4\""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# | export \n",
     "\n",
-    "def check_and_pad_id(imgid):\n",
-    "    \"\"\"Checks the Image ID\n",
+    "def check_and_pad_id(imgid)-> str | None:\n",
+    "    \"\"\"Checks the Image ID and pads it if necessary.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
     "    imgid : None | str\n",
-    "        _description_\n",
+    "        The ID of the individual image.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
     "    None | str\n",
-    "        _description_\n",
+    "        The padded image ID if it was provided, otherwise None.\n",
     "    \"\"\"\n",
     "    if imgid is None:\n",
     "        return None\n",
@@ -292,7 +307,7 @@
     "    @property\n",
     "    def obsid_results_savefolder(self):\n",
     "        subfolder = \"p4_catalog\" if self.datapath is None else self.datapath\n",
-    "        savefolder = analysis_folder() / subfolder\n",
+    "        savefolder = analysis_folder() / subfolder #TODO this realy does not need the analysis_folder\n",
     "        savefolder.mkdir(exist_ok=True, parents=True)\n",
     "        return savefolder\n",
     "\n",
@@ -330,7 +345,8 @@
     "        \"subfolder name for the final catalog after applying `cut`.\"\n",
     "        return \"L1C_cut_{:.1f}\".format(self.cut)\n",
     "\n",
-    "    def get_path(self, marking, specific=\"\"):\n",
+    "    def get_path(self, marking, specific=\"\")-> Path:\n",
+    "        \n",
     "        p = self.path_so_far\n",
     "        # now add the image_id\n",
     "        try:\n",
@@ -582,11 +598,32 @@
     "    def get_general_filter(self, f):\n",
     "        return self.read(where=f)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "planetary",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.-1"
   }
  },
  "nbformat": 4,
