Removed old filepath functions, now using only the datapath

--- a/notebooks/05a_production.io.ipynb
+++ b/notebooks/05a_production.io.ipynb
@@ -141,24 +141,7 @@
     "    savepath = input(\"Please provide the path where you want to store planet4 results:\")\n",
     "    set_database_path(savepath)\n",
     "else:\n",
-    "    data_root = get_data_root()\n",
-    "\n",
-    "def dropbox() -> Path:\n",
-    "    return Path.home() / \"Dropbox\"\n",
-    "\n",
-    "\n",
-    "def p4data() -> Path:\n",
-    "    return dropbox() / \"data\" / \"planet4\"\n",
-    "\n",
-    "#TODO Check if the p4data and dropbox are even needed\n",
-    "\n",
-    "def analysis_folder() -> Path:\n",
-    "    name = \"p4_analysis\"\n",
-    "    if p4data().exists():\n",
-    "        path = p4data() / name\n",
-    "    else:\n",
-    "        path = dropbox() / name\n",
-    "    return path"
+    "    data_root = get_data_root()\n"
    ]
   },
   {
@@ -306,8 +289,12 @@
     "\n",
     "    @property\n",
     "    def obsid_results_savefolder(self):\n",
-    "        subfolder = \"p4_catalog\" if self.datapath is None else self.datapath\n",
-    "        savefolder = analysis_folder() / subfolder #TODO this realy does not need the analysis_folder\n",
+    "\n",
+    "        if self.datapath == None:\n",
+    "            raise ValueError(\"No Datapath Suplied\")\n",
+    "        else:\n",
+    "            savefolder = self.datapath\n",
+    "        \n",
     "        savefolder.mkdir(exist_ok=True, parents=True)\n",
     "        return savefolder\n",
     "\n",
