--- a/notebooks/05a_production.io.ipynb
+++ b/notebooks/05a_production.io.ipynb
@@ -146,13 +146,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -585,13 +578,6 @@
     "    def get_general_filter(self, f):\n",
     "        return self.read(where=f)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -610,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.-1"
+   "version": "3.9.undefined"
   }
  },
  "nbformat": 4,
