--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -57,7 +57,7 @@
     "# | export \n",
     "\n",
     "#starting the logger\n",
-    "LOGGER: Logger = logging.getLogger()"
+    "LOGGER: Logger = logging.getLogger(__name__)"
    ]
   },
   {
@@ -152,8 +152,8 @@
     "        be used to receive the respective `obsid` from the TileID class.\n",
     "    \"\"\"\n",
     "    # import here to support parallel execution\n",
-    "    from planet4 import dbscan, markings\n",
-    "\n",
+    "    from p4tools.catalog import markings, dbscan\n",
+    "    \n",
     "    # parameter checks\n",
     "    if obsid is None and imgid is not None:\n",
     "        obsid = markings.TileID(imgid).image_name\n",
@@ -543,7 +543,7 @@
     "                todo.append(cubepath)\n",
     "\n",
     "        def get_tile_coords(cubepath):\n",
-    "            from planet4.projection import TileCalculator##TODO is that import necessary\n",
+    "            from p4tools.production.projection import TileCalculator##TODO is that import necessary\n",
     "\n",
     "            tilecalc = TileCalculator(cubepath, dbname=self.dbname)\n",
     "            tilecalc.calc_tile_coords()\n",
