Added fnotching module and Fnotch class in markings

--- a/notebooks/05b_production.markings.ipynb
+++ b/notebooks/05b_production.markings.ipynb
@@ -259,6 +259,80 @@
     "            fig.savefig(savepath, dpi=150)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
+    "\n",
+    "class Fnotch(object):\n",
+    "\n",
+    "    \"\"\"Manage Fnotch by providing a cut during output.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    value : float\n",
+    "        Fnotch value (= 1 - blotchiness), as calculated in clustering.ClusterManager()\n",
+    "    fandata : pandas.Series\n",
+    "        data set containing all required for Fan object (see `Fan`)\n",
+    "    blotchdata : pandas.Series\n",
+    "        data set containing all required for Blotch object (see `Blotch`)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    @classmethod\n",
+    "    def from_series(cls, series, scope):\n",
+    "        \"Create Fnotch instance from series with fan_ and blotch_ indices.\"\n",
+    "        fan = Fan(series.filter(regex='fan_').rename(lambda x: x[4:]),\n",
+    "                  scope=scope)\n",
+    "        blotch = Blotch(series.filter(regex='blotch_').rename(lambda x: x[7:]),\n",
+    "                        scope=scope)\n",
+    "        return cls(series.fnotch_value, fan, blotch, scope)\n",
+    "\n",
+    "    def __init__(self, fan, blotch, scope='planet4'):\n",
+    "        self.fan = fan\n",
+    "        self.blotch = blotch\n",
+    "        self.scope = scope\n",
+    "\n",
+    "        self.data = pd.concat([fan, blotch], ignore_index=True)\n",
+    "        self.data.index = ['fan', 'blotch']\n",
+    "        blotchiness = calc_blotchiness(fan.iloc[0]['n_votes'],\n",
+    "                                       blotch.iloc[0]['n_votes'])\n",
+    "        self.data.loc['fan', 'vote_ratio'] = (1 - blotchiness) + 0.01\n",
+    "        self.data.loc['blotch', 'vote_ratio'] = blotchiness - 0.01\n",
+    "\n",
+    "    def apply_cut(self, cut):\n",
+    "        \"\"\"Return the right marking, depending on cut value.\n",
+    "\n",
+    "        If the cut is at 0.8, the fnotch value has to be equal or better before\n",
+    "        we assign the fan to the Fnotch object. Otherwise we return a blotch.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        cut : float\n",
+    "            Level where we separate fan from blotch\n",
+    "\n",
+    "        Returns\n",
+    "        -------\n",
+    "        `Fan` or `Blotch` object, depending on `cut`\n",
+    "        \"\"\"\n",
+    "        row = self.data[self.data.vote_ratio > cut]\n",
+    "        return row\n",
+    "#         Marking = getattr(markings, row.index[0].title())\n",
+    "#         return Marking(row)\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return self.data.__repr__()\n",
+    "\n",
+    "    def store(self, fpath=None):\n",
+    "        out = pd.concat([self.fanstore, self.blotchstore])\n",
+    "        out['fnotch_value'] = self.value\n",
+    "        if fpath is not None:\n",
+    "            out.to_hdf(str(fpath.with_suffix('.hdf')), 'df')\n",
+    "        return out\n"
+   ]
   }
  ],
  "metadata": {
