fixed non existant import

--- a/notebooks/05_production.catalog.ipynb
+++ b/notebooks/05_production.catalog.ipynb
@@ -152,7 +152,7 @@
     "        be used to receive the respective `obsid` from the TileID class.\n",
     "    \"\"\"\n",
     "    # import here to support parallel execution\n",
-    "    from p4tools.catalog import markings, dbscan\n",
+    "    from p4tools.production import markings, dbscan\n",
     "    \n",
     "    # parameter checks\n",
     "    if obsid is None and imgid is not None:\n",
@@ -179,7 +179,7 @@
     "    fnotch_via_obsid: bool, optional\n",
     "        Switch to control if fnotching happens per image_id or per obsid\n",
     "    \"\"\"\n",
-    "    from planet4 import fnotching\n",
+    "    from p4tools.production import fnotching\n",
     "\n",
     "    # fnotching / combining ambiguous cluster results\n",
     "    # fnotch across all the HiRISE image\n",
