--- a/notebooks/05f_production.fnotching.ipynb
+++ b/notebooks/05f_production.fnotching.ipynb
@@ -295,6 +295,49 @@
     "        for kind in [\"fan\", \"blotch\"]:\n",
     "            write_l1c(kind, slashed, pm)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
+    "\n",
+    "def apply_cut(obsid, cut=0.5, savedir=None):\n",
+    "    \"\"\"Loop over all image_id paths for an obsid and apply cut to fnotches.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    obsid : str\n",
+    "        HiRISE obsid, i.e. P4 `image_name`\n",
+    "    cut : float, 0..1\n",
+    "        Value where to cut the vote_ratio of the fnotches.\n",
+    "    \"\"\"\n",
+    "    pm = io.PathManager(obsid=obsid, cut=cut, datapath=savedir)\n",
+    "    paths = pm.get_obsid_paths(\"L1B\")\n",
+    "    for path in paths:\n",
+    "        id_ = get_id_from_path(path)\n",
+    "        logger.debug(\"Slashing %s\", id_)\n",
+    "        pm.id = id_\n",
+    "        try:\n",
+    "            fnotches = pm.fnotchdf\n",
+    "        except FileNotFoundError:\n",
+    "            # no fnotch df was found. Now need to copy over\n",
+    "            # standard files to L1C folder\n",
+    "            pm.final_blotchfile.parent.mkdir(exist_ok=True)\n",
+    "            if pm.reduced_blotchfile.exists():\n",
+    "                logger.debug(\"Writing final_blotchfile for %s\", id_)\n",
+    "                pm.reduced_blotchdf.to_csv(pm.final_blotchfile, index=False)\n",
+    "            if pm.reduced_fanfile.exists():\n",
+    "                logger.debug(\"Writing final_fanfile for %s\", id_)\n",
+    "                pm.reduced_fandf.to_csv(pm.final_fanfile, index=False)\n",
+    "        else:\n",
+    "            # apply cut\n",
+    "            slashed = fnotches[fnotches.vote_ratio > pm.cut]\n",
+    "            for kind in [\"fan\", \"blotch\"]:\n",
+    "                write_l1c(kind, slashed, pm)\n"
+   ]
   }
  ],
  "metadata": {
