remove unused import

--- a/notebooks/05e_production.dbscan.ipynb
+++ b/notebooks/05e_production.dbscan.ipynb
@@ -31,7 +31,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from scipy.stats import circmean, circstds\n",
+    "#from scipy.stats import circmean, circstds\n",
     "import pyaml\n",
     "from pathlib import Path\n",
     "import logging\n",
